--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,6 @@
 </head>
 <body>
 <div id="main"></div>
-<script src="js/main.js"></script>
+<script src="js/bundle.js"></script>
 </body>
 </html>
